<resources>
    <string name="app_name">Square Check</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Selamat Datang</string>

    <string name="presence_btn">ABSEN</string>
    <string name="summary_label">Rekap Total</string>
    <string name="hadir_label">Hadir</string>
    <string name="izin_label">Izin</string>
    <string name="terlambat_label">Terlambat</string>
    <string name="alpa_label">Alpa</string>
    <string name="subject">Mata Kuliah</string>
    <string name="finish">SELESAI</string>
    <string name="notification_design_desc">Notification Art</string>
    <string name="profile_desc">Profile Image</string>
    <string name="attendance_summary_label">Rekap List</string>

    <string name="hadir_placeholder">102</string>
    <string name="izin_placeholder">12</string>
    <string name="terlambat_placeholder">23</string>
    <string name="alpa_placeholder">2</string>
    <string name="subject_placeholder">Mobile Programming</string>
    <string name="presence_status_placeholder">Tepat Waktu</string>
    <string name="presence_time_placeholder">08:02</string>
    <string name="classroom_placeholder">3 D4 Informatika A</string>
    <string name="schedule_placeholder">Selasa, 20 Oktober 2020</string>
    <string name="student_id_placeholder">2110181001</string>
    <string name="student_name_placeholder">M Riza Bachtiar</string>
    <string name="student_id_header">NIM</string>
    <string name="student_name_header">Nama</string>
    <string name="student_status_header">Status</string>
    <string name="lecturer_placeholder">Fadilah Fahrul</string>
    <string name="schedule_day_placeholder">Jum\'at</string>
    <string name="attendance_date_placeholder">2 Okt 21</string>
    <string name="class_subject_placeholder">3 D4 IT A - Mobile Programming</string>

    <string name="calendar_title">Kalendar Akademik</string>
    <string name="calendar_legend_mon">Senin</string>
    <string name="calendar_legend_tue">Selasa</string>
    <string name="calendar_legend_wed">Rabu</string>
    <string name="calendar_legend_thu">Kamis</string>
    <string name="calendar_legend_fri">Jumat</string>
    <string name="calendar_legend_sat">Sabtu</string>
    <string name="calendar_legend_sun">Minggu</string>
    <string name="calendar_legend_month_placeholder">Oktober</string>
    <string name="information_label">Keterangan</string>
    <string name="information_desc_placeholder">Pekan Ujian Akhir</string>
    <string name="information_date_placeholder">6 – 15</string>
    <string name="class_subject">Kelas - Matakuliah</string>
    <string name="attend">Hadir</string>
    <string name="open_attendance">Buka Absensi</string>
    <string name="close_attendance">Tutup Absensi</string>
    <string name="remove_attendance">HAPUS ABSENSI</string>
    <string name="attendance_summary">REKAP ABSENSI</string>
    <string name="dash">-</string>
    <string name="login_title">Login</string>
    <string name="attendance_day_placeholder">Selasa</string>
    <string name="attendance_date_2_placeholder">20 Oktober 2020</string>
    <string name="attendance_hadir_placeholder">18</string>
    <string name="slash">/</string>
    <string name="attendance_total_placeholder">30</string>
    <string name="profile_name_placeholder">Abraham Maulana</string>
    <string name="profile_id_placeholder">2110181026</string>
    <string name="profile_class_placeholder">D4 Informatika 2018</string>

    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="logout_confirmation">Apakah anda yakin ingin logout ?</string>
    <string name="profile_photo_desc">Profile Photo</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="app_short_description">"Absensi\nTanpa Ribet"</string>
    <string name="app_long_description">Ingin aplikasi absensi yang mudah dan cepat?
        \nSquare Checks solusi untuk Anda, dengan fitur
        One-Click absen dan reminder ketika presensi
        kelas sudah dibuka serta dilengkapi dengan
        rekap absensi yang dapat diekspor ke PDF.
    </string>
    <string name="developer_team">Developer Team</string>
    <string name="sponsored_by">Sponsored By</string>
    <string name="supported_by">Supported By</string>
    <!-- &amp; = &-->
    <string name="supervisors_and_mentors">Supervisors <br/> &amp; Mentors :</string>
    <string name="about_us">About Us</string>
</resources>