<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin8dp"
    android:layout_marginEnd="@dimen/margin8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="16sp"
        tools:text="@string/profile_name_placeholder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white60p"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        tools:text="@string/profile_id_placeholder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white60p"
        android:textSize="10sp"
        tools:ignore="SmallSp"
        tools:text="@string/profile_class_placeholder" />
</LinearLayout>