<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/charcohi"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="125dp"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/welcome"
        android:textColor="#0543A8"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EtLoginBox"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="12dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EtLoginBox"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="29dp"/>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="297dp"
        android:height="37dp"
        android:background="@drawable/rounded_corner_blue_button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="02dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/background"
        android:letterSpacing="0.089"
        />
</LinearLayout>