<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presence"
            type="com.squarecheck.student.model.NotificationPresenceItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="90dp">

        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@{presence.subjectName}"
            android:textAlignment="center"
            android:textColor="?colorSecondaryDarker"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/subject_placeholder" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/notification_design_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/notification" />

        <TextView
            android:id="@+id/tv_presence_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@{presence.time}"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@{context.getColor(presence.color)}"
            tools:text="@string/presence_time_placeholder"
            tools:textColor="@color/hadir" />

        <TextView
            android:id="@+id/tv_presence_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@{presence.status}"
            android:textColor="@color/gray"
            android:textStyle="bold"
            tools:text="@string/presence_status_placeholder" />

        <Button
            android:id="@+id/btn_notification_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="?attr/colorSecondary"
            android:paddingStart="48dp"
            android:paddingTop="@dimen/margin8dp"
            android:paddingEnd="48dp"
            android:paddingBottom="@dimen/margin8dp"
            android:text="@string/finish"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>
</layout>