<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.squarecheck.shared.model.StudentAttendanceModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gutter">

        <TextView
            android:id="@+id/tv_student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.nrp}"
            tools:text="@string/student_id_placeholder" />

        <TextView
            android:id="@+id/tv_student_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/gutter16dp"
            android:paddingEnd="@dimen/gutter16dp"
            android:singleLine="true"
            android:text="@{data.name}"
            android:textAlignment="textStart"
            tools:text="@string/student_name_placeholder" />

        <TextView
            android:id="@+id/tv_student_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{data.status}"
            android:textAlignment="textEnd"
            android:textColor="@{context.getColor(data.color)}"
            tools:text="@string/hadir_label"
            tools:textColor="@color/hadir" />
    </LinearLayout>
</layout>
